start working on Usecase Booking

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "de.xxlstrandkorbverleih.smartkorb"
-        minSdk 21
+        minSdk 26
         targetSdk 30
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ android {
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     def lifecycle_version = "2.2.0"
     def room_version = "2.3.0"
     def nav_version = "2.3.5"
